--- a/index.css
+++ b/index.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;500&display=swap');
+
 body {
     margin: 0;
-    background: linear-gradient(0deg, #000001 , #018 150%);
+    background: linear-gradient(0deg, #000001, #018 150%);
     height: 100vh;
 }
 
@@ -9,6 +10,7 @@ body {
     display: flex;
     justify-content: space-evenly;
 }
+
 .container2 {
     text-align: center;
     padding-left: 30px;
@@ -18,6 +20,8 @@ body {
 h2 {
     color: white;
     margin-top: 40px;
+    font-family: Rubik;
+    font-weight: 300;
 }
 
 h3 {
@@ -55,7 +59,7 @@ button:hover {
     font-family: Rubik;
     font-weight: 500;
     color: white;
-    background: linear-gradient(0deg, #000001 , #028 150%);
+    background: linear-gradient(0deg, #000001, #028 150%);
     padding: 5px;
     border: 0px;
     border-radius: 8px;
